--- a/web/contato.xhtml
+++ b/web/contato.xhtml
@@ -6,50 +6,50 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
     <ui:composition template="/home.xhtml">
-        <ui:define name="convenio">
+        <ui:define name="contato">
             <p:panel header="Cadastro de Convênio" style="border: #ffffff" toggleable="true" closable="false" toggleSpeed="500" closeSpeed="2000" widgetVar="panel" >
                 <h:form prependId="false" id="menulateral">
                     <p:menubar>
-                        <p:menuitem value="Novo Convênio" actionListener="#{convenioC.prepararAdicionarConvenio}" update=":form:infosConvenio" oncomplete="dialogGerConvenio.show()"  icon="ui-icon-document"/>                       
+                        <p:menuitem value="Novo Convênio" actionListener="#{contatoC.prepararAdicionarContato}" update=":form:infosContato" oncomplete="dialogGerContato.show()"  icon="ui-icon-document"/>                       
                         <p:menuitem value="Sair" url="/home.jsf" icon="ui-icon-extlink"/>
                     </p:menubar>                    
                 </h:form>
                 <h:form prependId="false" id="form1">
-                    <p:dataTable id="tabela" var="convenio" value="#{convenioC.listarConvenios}">
+                    <p:dataTable id="tabela" var="contato" value="#{contatoC.listarContatos}">
                         <p:column>
                             <f:facet name="header">
                                 <h:outputText value="Descrição do Convênio"/>
                             </f:facet>
-                            <h:outputText value="#{convenio.descricao}" />
+                            <h:outputText value="#{contato.descricao}" />
                         </p:column>
                         <p:column>
                             <f:facet name="header">
                                 <h:outputText value="Alterar"/>
                             </f:facet>
-                            <p:commandButton actionListener="#{convenioC.prepararAlterarConvenio}" icon="ui-icon-arrowrefresh-1-w" update=":form:infosConvenio" oncomplete="dialogGerConvenio.show()" />
+                            <p:commandButton actionListener="#{contatoC.prepararAlterarContato}" icon="ui-icon-arrowrefresh-1-w" update=":form:infosContato" oncomplete="dialogGerContato.show()" />
                         </p:column>
                         <p:column>
                             <f:facet name="header">
                                 <h:outputText value="Excluir"/>
                             </f:facet>
-                            <p:commandButton actionListener="#{convenioC.excluirConvenio}" icon="ui-icon-close" ajax="true" onclick="confirmation.show()" />
+                            <p:commandButton actionListener="#{contatoC.excluirContato}" icon="ui-icon-close" ajax="true" onclick="confirmation.show()" />
                         </p:column>
                     </p:dataTable>                    
                 </h:form>
                 
-                <p:dialog header="Gerencia Convênio" widgetVar="dialogGerConvenio"  resizable="false" modal="false" showEffect="slide" width="500">
+                <p:dialog header="Gerencia Convênio" widgetVar="dialogGerContato"  resizable="false" modal="false" showEffect="slide" width="500">
                     <h:form prependId="false" id="form">
                         <p:menubar>
-                            <p:menuitem  value="Salvar" update=":form1:tabela" oncomplete="dialogGerConvenio.hide();" actionListener="#{convenioC.adicionarConvenio}" icon="ui-icon-disk" />
-                            <p:menuitem value="Alterar" update=":form1:tabela" oncomplete="dialogGerConvenio.hide();" actionListener="#{convenioC.alterarConvenio}" icon="ui-icon-arrowrefresh-1-w"/>                    
+                            <p:menuitem  value="Salvar" update=":form1:tabela" oncomplete="dialogGerContato.hide();" actionListener="#{contatoC.adicionarContato}" icon="ui-icon-disk" />
+                            <p:menuitem value="Alterar" update=":form1:tabela" oncomplete="dialogGerContato.hide();" actionListener="#{contatoC.alterarContato}" icon="ui-icon-arrowrefresh-1-w"/>                    
                         </p:menubar>  
-                        <h:panelGrid id="infosConvenio" columns="2" style="margin-bottom:10px">
-                            <h:outputLabel for="descConvenio" value="Convênio:" />
-                            <h:inputText id="descConvenio" value="#{convenioC.convenio.descricao}"
+                        <h:panelGrid id="infosContato" columns="2" style="margin-bottom:10px">
+                            <h:outputLabel for="descContato" value="Convênio:" />
+                            <h:inputText id="descContato" value="#{contatoC.contato.descricao}"
                                          required="true">
                                  <f:validateLength minimum="2" /> 
                             </h:inputText>
-                            <p:message for="descConvenio" id="msgFirstname" /> 
+                            <p:message for="descContato" id="msgFirstname" /> 
                         </h:panelGrid>
                     </h:form>
                 </p:dialog>
