--- a/web/home.xhtml
+++ b/web/home.xhtml
@@ -10,7 +10,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <link href="./resources/css/default.css" rel="stylesheet" type="text/css" />
         <link href="./resources/css/cssLayout.css" rel="stylesheet" type="text/css" />
-        <title>Atendimento Médico</title>
+        <title>Contatos</title>
         <style>
             .ui-widget,
             .ui-widget .ui-widget {
@@ -21,8 +21,8 @@
 
     <h:body>
         <p:layout fullPage="true">
-            <p:layoutUnit position="north" size="95" resizable="false" closable="false" collapsible="false">
-                <p:graphicImage value="/images/logo.jpg" />
+            <p:layoutUnit position="north" size="150" resizable="false" closable="false" collapsible="false">
+                <p:graphicImage value="/images/agenda.jpg" />
                 <h:outputText value="Usuário: #{loginC.nomeUserLogado}" style="position: absolute;right: 5%;bottom: 5%" />
             </p:layoutUnit>
 
@@ -34,26 +34,10 @@
                 <h:form>
                     <p:menu style="border: #ffffff">
                         <p:submenu label="Cadastros">
-                            <p:menuitem value="Convênios" url="/convenio.jsf" ajax="true" icon="ui-icon-star"/>                            
-                            <p:menuitem value="Médicos" url="/medico.jsf" ajax="true" icon="ui-icon-star"/>                            
-                            <p:menuitem value="Especialidades" url="/especialidade.jsf" ajax="true" icon="ui-icon-star"/>
-                            <p:menuitem value="Espec. Médicos" url="/medicoespecialidade.jsf" ajax="true" icon="ui-icon-star"/>                            
-                            <p:menuitem value="Pacientes" url="/paciente.jsf" ajax="true" icon="ui-icon-star"/>
-                            <p:menuitem value="Tratamentos" url="/tratamento.jsf" ajax="true" icon="ui-icon-star"/> 
+                            <p:menuitem value="Contatos" url="/contato.jsf" ajax="true" icon="ui-icon-star"/>                            
+                            
                         </p:submenu>
-                        <p:submenu label="Atendimentos">                            
-                            <p:menuitem value="Agendamento" url="/agendamento.jsf" ajax="true" icon="ui-icon-star"/>
-                            <p:menuitem value="Atendimento" url="atendimento.jsf" ajax="true" icon="ui-icon-star"/>
-                            <p:menuitem value="Registro de Materiais" url="registro.jsf" ajax="true" icon="ui-icon-star"/>
-                            <p:menuitem value="Faturamento" url="faturamento.jsf" ajax="true" icon="ui-icon-star"/>
-                        </p:submenu>
-                        <p:submenu label="Produtos">
-                            <p:menuitem value="Tipo de Produto" url="/tipoProduto.jsf" ajax="true" icon="ui-icon-star"/>
-                            <p:menuitem value="Produtos" url="/produto.jsf" ajax="true" icon="ui-icon-star"/>
-                        </p:submenu>
-                         <p:submenu label="Administração">
-                              <p:menuitem id="Usuario" value="Usuário" url="/usuario.jsf" ajax="true" icon="ui-icon-star"/>
-                         </p:submenu>
+                       
                     </p:menu>
                 </h:form>
             </p:layoutUnit> 
