--- a/web/home.xhtml
+++ b/web/home.xhtml
@@ -27,7 +27,7 @@
             </p:layoutUnit>
 
                 <p:layoutUnit position="south" size="45" header="Sobre" resizable="true" closable="true" collapsible="true">
-                <h:outputText value="MedicalSystem © 2012" />
+                <h:outputText value="ContactSystem © 2012" />
             </p:layoutUnit>
 
             <p:layoutUnit  position="west" size="170"  resizable="true" closable="false" collapsible="true">
@@ -42,15 +42,7 @@
                 </h:form>
             </p:layoutUnit> 
             <p:layoutUnit position="center">
-                <ui:insert name="convenio" />
-                <ui:insert name="medico" />
-                <ui:insert name="especialidade" />
-                <ui:insert name="tipoProduto" />
-                <ui:insert name="paciente" />
-                <ui:insert name="agendamento"/>
-                <ui:insert name="usuario"/>
-                <ui:insert name="atendimento"/>
-                <ui:insert name="registro"/>
+                <ui:insert name="contato" />               
             </p:layoutUnit>
         </p:layout>
     </h:body>
